# SalesApp

./: .gitignore  config.py  database.db  main.py  migrate_db.py  produtos_fixed.xlsx  pyproject.toml  requirements.txt  store_manager.py
server/: database_full.db  db_sqlite.py  main.py
src/: aws_db.py  database.db  db_sqlite.py  entry.py  gui_flet.py  launcher.py  payment.py  sale.py  serial_scanner.py  sync_client.py  updater.py
src/ui/: gui.py  history.py  main_window.py  product_editor.py  shop_selection.py  sync_client.py
